force css versioning

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>LootJunkie - Overwatch Loot Box Simulator</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <title>PackCracker - Hearthstone Pack Simulator</title>
-    <link href="css/style.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.min.css?ver=3" rel="stylesheet" type="text/css" />
     <link href="css/animate.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700|Ubuntu:300,400,500,700" rel="stylesheet">
     <script>
