Replaced imagery and updated reflected version

--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
             <a href="index.html"><img src="images/logo.svg" alt="LootJunkie"></a>
           </div>
           <div class="grid__item large--four-fifths">
-            <small>reflecting 1.13.0.2</small>
+            <small>reflecting 1.16.0.2</small>
             <ul class="horizontal-menu right">
               <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
               <li><a href="mailto:hello@matou.io" target="_blank">Email</a></li>
-              <li><a href="https://streamtip.com/t/omgmrm" target="_blank">Donate</a></li>
             </ul>
           </div>
         </div>
@@ -56,13 +55,13 @@
       <button class="generate btn shadow yellow" onclick="ga('send', 'event', 'Generate box', 'Click', 'Open loot box');">Open Loot Box</button><br>
       <div class="box-type">
         <ul class="horizontal-menu">
-          <li><a title="Standard" id="standard" href="javascript: void(0)" class="active"><img src="images/events/ow.png" alt="Standard"></a></li>
-          <li><a title="Summer Games" id="summer2016" href="javascript: void(0)"><img src="images/events/summer.png" alt="Summer Games 2016"></a></li>
-          <li><a title="Halloween Terror" id="halloween" href="javascript: void(0)"><img src="images/events/halloween.png" alt="Halloween Terror"></a></li>
-          <li><a title="Winter Wonderland" id="winter" href="javascript: void(0)"><img src="images/events/winter.png" alt="Winter Wonderland"></a></li>
-          <li><a title="Year of the Rooster" id="rooster" href="javascript: void(0)"><img src="images/events/rooster.png" alt="Year of the Rooster"></a></li>
-          <li><a title="Anniversary" id="anniversary" href="javascript: void(0)"><img src="images/events/anniversary.png" alt="Anniversary"></a></li>
-          <li><a title="Uprising" id="uprising" href="javascript: void(0)"><img src="images/events/uprising.png" alt="Uprising"></a></li>
+          <li><a title="Standard" id="standard" href="javascript: void(0)" class="active"><img class="lootbtn" src="images/events/btn-ow.svg" alt="Standard"></a></li>
+          <li><a title="Summer Games" id="summer2016" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-summer.svg" alt="Summer Games 2016"></a></li>
+          <li><a title="Halloween Terror" id="halloween" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-halloween.svg" alt="Halloween Terror"></a></li>
+          <li><a title="Winter Wonderland" id="winter" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-winter.svg" alt="Winter Wonderland"></a></li>
+          <li><a title="Year of the Rooster" id="rooster" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-rooster.svg" alt="Year of the Rooster"></a></li>
+          <li><a title="Anniversary" id="anniversary" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-anniversary.svg" alt="Anniversary"></a></li>
+          <li><a title="Uprising" id="uprising" href="javascript: void(0)"><img class="lootbtn" src="images/events/btn-uprising.svg" alt="Uprising"></a></li>
         </ul>
       </div>
       <small class="center courtesy">Item database from <a href="https://github.com/Js41637/Overwatch-Item-Tracker" target="_blank">Overwatch Item Tracker</a></small>
