--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="css/style.min.css?ver=4" rel="stylesheet" type="text/css" />
     <link href="css/animate.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700|Ubuntu:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -35,6 +36,7 @@
             <ul class="horizontal-menu right">
               <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
               <li><a href="mailto:hello@matou.io" target="_blank">Email</a></li>
+              <li><i class="js-volume material-icons is-on">volume_up</i></li>
             </ul>
           </div>
         </div>
