--- a/experimental/index.html
+++ b/experimental/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="grid">
           <div class="grid__item large--one-fifth">
-              <img src="images/logo.svg">
+              <a href="../index.html"><img src="images/logo.svg"></a>
           </div>
           <div class="grid__item large--four-fifths">
               <ul class="horizontal-menu">
